--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 <div class="choice">
                     <div class="choice-details-wapper">
                         <div class="choic-header d-flex">
-                            <i class="choice-header-text">📅</i>
+                            <i class="choice-header-text">&nbsp;&nbsp;📅</i>
                             <div class="choice-header-text">DATE</div>
                             <div class="choice-date" id="choice-date"></div>
                             <br>
