--- a/index.html
+++ b/index.html
@@ -25,35 +25,20 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
-            <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="28"
-                height="28"
-                fill="#ffd700"
-                viewBox="0 0 24 24"
-                class="me-2"
-                aria-hidden="true"
-                focusable="false"
-            >
-                <path d="M12 2L15 8H9L12 2Z" />
-                <circle cx="12" cy="16" r="6" stroke="#ffd700" stroke-width="2" fill="none" />
-            </svg>
-            Point Sport
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#ffd700" viewBox="0 0 24 24" class="me-2"
+                    aria-hidden="true" focusable="false">
+                    <path d="M12 2L15 8H9L12 2Z" />
+                    <circle cx="12" cy="16" r="6" stroke="#ffd700" stroke-width="2" fill="none" />
+                </svg>
+                Point Sport
             </a>
-            <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navMenu"
-            aria-controls="navMenu"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-            >
-            <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
+                aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navMenu">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#bottomNav">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#todayPredictionHeader">Predictions</a></li>
                     <li class="nav-item"><a class="nav-link" href="#histories">History</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
@@ -111,7 +96,9 @@
                 <!-- Sports Generated Dynamically -->
             </div>
 
-            <h5>Choose Odds</h5>
+            <h5 style="display: flex; align-items: center; justify-content: space-between;">Choose Odds
+                <a href="./test1.html" style="cursor: pointer; text-decoration: none; color: #fff;">Custom Odds</a>
+            </h5>
             <div id="oddsBtns" class="scroll-horizontal" role="list" tabindex="0" aria-label="Odds selection">
                 <!-- Odds Generated Dynamically -->
             </div>
@@ -128,19 +115,9 @@
                     <input type="radio" id="riskLow" name="risk" value="Low risk" />
                     <label for="riskLow">
                     <span class="custom-radio" aria-hidden="true">
-                        <svg
-                        viewBox="0 0 24 24"
-                        aria-hidden="true"
-                        focusable="false"
-                        width="18"
-                        height="18"
-                        fill="none"
-                        stroke="#ffd700"
-                        stroke-width="3"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        >
-                        <polyline points="20 6 9 17 4 12" />
+                        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" width="18" height="18" fill="none" stroke="#ffd700"
+                            stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                            <polyline points="20 6 9 17 4 12" />
                         </svg>
                     </span>
                     Low risk
@@ -150,47 +127,28 @@
                     <input type="radio" id="riskVeryLow" name="risk" value="Very low risk" />
                     <label for="riskVeryLow">
                     <span class="custom-radio" aria-hidden="true">
-                        <svg
-                        viewBox="0 0 24 24"
-                        aria-hidden="true"
-                        focusable="false"
-                        width="18"
-                        height="18"
-                        fill="none"
-                        stroke="#ffd700"
-                        stroke-width="3"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        >
-                        <polyline points="20 6 9 17 4 12" />
+                        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" width="18" height="18" fill="none" stroke="#ffd700"
+                            stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                            <polyline points="20 6 9 17 4 12" />
                         </svg>
                     </span>
                     Very low risk
                     </label>
-                </div>
+                </div> 
                 <div class="risk-option" role="radio" aria-checked="false" tabindex="-1" data-value="Least risk">
                     <input type="radio" id="riskLeast" name="risk" value="Least risk" />
                     <label for="riskLeast">
                     <span class="custom-radio" aria-hidden="true">
-                        <svg
-                        viewBox="0 0 24 24"
-                        aria-hidden="true"
-                        focusable="false"
-                        width="18"
-                        height="18"
-                        fill="none"
-                        stroke="#ffd700"
-                        stroke-width="3"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        >
-                        <polyline points="20 6 9 17 4 12" />
+                        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" width="18" height="18" fill="none" stroke="#ffd700"
+                            stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                            <polyline points="20 6 9 17 4 12" />
                         </svg>
                     </span>
                     Least risk
                     </label>
                 </div>
             </div>
+            
             <div class="btn-wrapper"> 
                 <button id="generateBtn" class="btn-generate btn-left" aria-label="Generate matches">Generate</button> 
                 <button id="resetBtn" class="btn-reset btn-right d-none" aria-label="Reset selections">Reset</button> 
