--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 <!-- Sports Generated Dynamically -->
             </div>
 
-            <h5 style="display: flex; align-items: center; justify-content: space-between;">Choose Odds
-                <a href="./test1.html" style="cursor: pointer; text-decoration: none; color: #fff;">Custom Odds</a>
+            <h5 style="display: flex; align-items: center; justify-content: space-between;">🎯&nbsp;Choose Odds
+                <a href="./test1.html" style="cursor: pointer; text-decoration: none; color: #fff;">⚽&nbsp;Custom Odds</a>
             </h5>
             <div id="oddsBtns" class="scroll-horizontal" role="list" tabindex="0" aria-label="Odds selection">
                 <!-- Odds Generated Dynamically -->
