--- a/test1.html
+++ b/test1.html
@@ -19,7 +19,7 @@
     <div class="wrap">
         <header>
             <h1>
-                <a href="./" class="" style="color: #fff; text-decoration: none;">< Back</a>
+                <a href="./" class="" style="color: #fff; text-decoration: none; text-align: left;">< Back</a>
             </h1>
             <div class="spinner" id="spinner">
                 <div class="dot"></div>
