--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <!-- FontAwesome CDN for icons -->
     <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"> -->
 
-    <link rel="stylesheet" href="./themes.css" />
-    <link rel="stylesheet" href="./slide.css" />
-    <link rel="stylesheet" href="./his.css" />
-    <link rel="stylesheet" href="./sug.css" />
-    <link rel="stylesheet" href="./response.css" />
+    <link rel="stylesheet" href="./styles/themes.css" />
+    <link rel="stylesheet" href="./styles/slide.css" />
+    <link rel="stylesheet" href="./styles/his.css" />
+    <link rel="stylesheet" href="./styles/sug.css" />
+    <link rel="stylesheet" href="./styles/response.css" />
 
     <!-- Include Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
@@ -96,9 +96,56 @@
                 <!-- Sports Generated Dynamically -->
             </div>
 
-            <h5 style="display: flex; align-items: center; justify-content: space-between;">🎯&nbsp;Choose Odds
-                <a href="./test1.html" style="cursor: pointer; text-decoration: none; color: #fff;">⚽&nbsp;Custom Odds</a>
+            <h5 id="oddsTitle"
+                style="display: flex; align-items: center; justify-content: space-between; color:#fff; font-family:sans-serif;">
+                🎯&nbsp;Choose Odds
+                <label style="display: flex; align-items: center; cursor: pointer; gap:6px;" title="Custom Odds">
+                    <input type="checkbox" id="customOddsSwitch" style="display:none;">
+                    <span id="switchTrack" style="
+                        width: 40px; height: 20px; background: #666; border-radius: 20px; position: relative;
+                        display: inline-block; transition: background 0.3s;">
+                        <span id="switchKnob" style="
+                            position: absolute; width: 16px; height: 16px; border-radius: 50%;
+                            background: #fff; top: 2px; left: 2px; transition: transform 0.3s;">
+                        </span>
+                    </span>
+                </label>
             </h5>
+            
+            <script>
+                const oddsTitle = document.getElementById("oddsTitle");
+                const switchInput = document.getElementById("customOddsSwitch");
+                const switchTrack = document.getElementById("switchTrack");
+                const knob = document.getElementById("switchKnob");
+
+                switchInput.addEventListener("change", function () {
+                    if (this.checked) {
+                        // update title
+                        oddsTitle.childNodes[0].nodeValue = "⚽ Custom Odds ";
+
+                        // animate ON
+                        switchTrack.style.background = "#4caf50";
+                        knob.style.transform = "translateX(20px)";
+
+                        // reset OFF + redirect
+                        setTimeout(() => {
+                            this.checked = false;
+                            switchTrack.style.background = "#666";
+                            knob.style.transform = "translateX(0)";
+                            oddsTitle.childNodes[0].nodeValue = "🎯 Choose Odds ";
+                            window.location.href = "./custom.html";
+                        }, 400);
+                    } else {
+                        // reset if manually unchecked
+                        oddsTitle.childNodes[0].nodeValue = "🎯 Choose Odds ";
+                        switchTrack.style.background = "#666";
+                        knob.style.transform = "translateX(0)";
+                    }
+                });
+            </script>
+
+
+
             <div id="oddsBtns" class="scroll-horizontal" role="list" tabindex="0" aria-label="Odds selection">
                 <!-- Odds Generated Dynamically -->
             </div>
@@ -333,12 +380,12 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="./scripts.js"></script>
-    <script src="./fetch.js"></script>
-    <script src="./slid.js"></script>
-    <script src="./adsjs.js"></script>
-    <script src="./his.js"></script>
-    <script src="./days.js"></script>
+    <script src="./scripts/scripts.js"></script>
+    <script src="./scripts/fetch.js"></script>
+    <script src="./scripts/slid.js"></script>
+    <script src="./scripts/adsjs.js"></script>
+    <script src="./scripts/his.js"></script>
+    <script src="./scripts/days.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Font Awesome for icons -->
