--- a/history.html
+++ b/history.html
@@ -10,7 +10,8 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background: #f5f5f5;
+            background: linear-gradient(135deg, #0a1f44, #021d3a);
+            color: #333;
         }
 
         .container {
@@ -112,8 +113,8 @@
 
 <body>
     <div class="container">
-        <h1>History Explorer — GUI Output</h1>
-        <p class="small">Select a resource, optional includes, and enter IDs, dates, or date ranges. Errors are
+        <h1 style="color: #fff;">History Explorer — GUI Output</h1>
+        <p class="small" style="color: #fff;">Select a resource, optional includes, and enter IDs, dates, or date ranges. Errors are
             displayed clearly.</p>
 
         <div class="grid" style="display:flex; gap:16px;">
