--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-   
+    <!-- <style>
+        .team-logo {
+        width: 40px;
+        height: 40px;
+        object-fit: contain;
+        }
+        .team-name {
+        font-size: 0.9rem;
+        }
+        .match-score {
+        font-size: 1.5rem;
+        }
+        .prediction-section, .odds-section {
+        font-size: 0.95rem;
+        }
+    </style> -->
 </head>
 
 <body>
