--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
     </div>
 
     <!-- Footer -->
-   <footer class="footer" id="footer">
+   <!-- <footer class="footer" id="footer">
         <div class="footer-container">
             <div class="footer-left">
                 <h3>Point Sport</h3>
@@ -513,7 +513,7 @@
             </div>
         </div>
 
-    </footer>
+    </footer> -->
 
     <!-- Scripts -->
     <script src="./scripts/scripts.js"></script>
