--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 
                 <div class="carousel-controls" aria-hidden="false">
                     <button class="carousel-btn prev-btn" aria-label="Previous match" title="Previous">‹</button>
-                    <div class="carousel-dots" id="carouselDots" role="tablist" aria-label="Slide indicators"></div>
+                    <div class="carousel-dots overflow-x-hidden" id="carouselDots" role="tablist" aria-label="Slide indicators"></div>
                     <button class="carousel-btn next-btn" aria-label="Next match" title="Next">›</button>
                 </div>
             </div>
