--- a/index.html
+++ b/index.html
@@ -492,6 +492,8 @@
             </div>
         </aside>
     </div>
+    <iframe src="custom.html" style="display:none;" id="hiddenPage"></iframe>
+
 
     <!-- Footer -->
    <!-- <footer class="footer" id="footer">
